docs(sonar): CONTRIBUTING described the mechanism this change replaced
Flagged in three review passes and missed in all three, which is its own
lesson: CHANGELOG and ROADMAP got careful treatment each round because they are
where a change is expected to be recorded, and the file that documents HOW the
thing works was not on that list.

It said configuration lives in `sonar-project.properties`, and parenthetically
that the `sonar:sonar` Maven goal would not read it. This PR deletes that file
and runs exactly that goal, so the sentence was backwards on both halves at
once. Two more paragraphs had expired the same way: the SonarQube Cloud
preconditions were written as pending work when both are done, and "remove
continue-on-error once a CI analysis has been confirmed green" no longer
describes the decision, which is to keep it on its own standing reason.

Rewritten around what is true now, plus the two traps this PR fell into, so the
next person adding a property does not: write a report path as
`${project.build.directory}/...` and never a `**/` glob, because a glob resolves
per module and the reactor root then matches every module's file at once; and do
not set `sonar.projectName`, because a root-POM property is inherited by all
eleven modules and does not rename an existing project anyway.

Also reverts the temporary `-Dsonar.verbose=true`, and the reason it goes is a
result rather than a tidy-up: the property reached the scanner and the log came
back with ZERO DEBUG lines and the same unnamed `Unresolved imports/types`
warning. That is not what raises the engine's log level under the Maven
bootstrapper, and both the workflow comment and CONTRIBUTING now say so, so the
next attempt starts from finding the right lever instead of repeating this one.

What the probe did establish stands: the warning fires in every module with
compile dependencies and not in exeris-kernel-spi, which has none, while `Use of
preview features` fires in every Java module including that one. 